feat about: set content

--- a/src/assets/scss/maizina.scss
+++ b/src/assets/scss/maizina.scss
@@ -2,14 +2,13 @@
 @import url("./reset.scss");
 
 :root {
-    --dark-primary   : #027BE3;
-    --dark-secondary : #26A69A;
-    --dark-accent    : #9C27B0;
-    --dark-color     : #1d1d1d;
+  --dark-primary: #027be3;
+  --dark-secondary: #26a69a;
+  --dark-accent: #9c27b0;
+  --dark-color: #1d1d1d;
 
-    --positive-color  : #21BA45;
-    --negative-color  : #C10015;
-    --info-color     : #31CCEC;
-    --warning-color   : #fec608;
+  --positive-color: #21ba45;
+  --negative-color: #c10015;
+  --info-color: #31ccec;
+  --warning-color: #fec608;
 }
-
