--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,5 +1,84 @@
-#m_about{
-    height: 100%;
+#m_about {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background: white;
+  .m_about_left {
+    flex: 50%;
     width: 100%;
-    background: red;
+    display: flex;
+    justify-content: center;
+
+    img {
+      height: 100%;
+      width: auto;
+    }
   }
+  .m_about_right {
+    flex: 50%;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: "Raleway-Bold";
+    .m_about_title {
+      text-transform: uppercase;
+      font-size: 36px;
+      margin: 10px 0px;
+      .name {
+        color: var(--warning-color);
+      }
+    }
+    .m_about_subtitle {
+      color: #666666;
+      font-size: 18px;
+      margin: 10px 0px;
+    }
+    p {
+      margin: 10px 0px;
+      font-size: 13px;
+      line-height: 24px;
+      color: #333333;
+      font-family: "Raleway-Medium";
+    }
+  }
+}
+
+.m_about_social {
+  a {
+    margin-right: 15px;
+    transition: opacity 0.5s;
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+.btn {
+  cursor: pointer;
+  border: none;
+  margin: 15px auto 15px 0;
+  padding: 0;
+  font-family: "Montserrat-Bold";
+  font-size: 22px;
+  line-height: 29px;
+  height: 51px;
+  background: #fff;
+  border: solid 1px #d43d40;
+  border-radius: 51px;
+  padding: 0px 25px;
+}
+
+.btn_danger {
+  color: white;
+  background: #d43d40;
+  transition: color 1s, background-color 0.5s;
+  &:focus {
+    border: none;
+  }
+  &:hover {
+    background: darken(#d43d40, 10);
+    color: darken(#ffff, 8);
+  }
+}
