--- a/src/components/skill/skill.scss
+++ b/src/components/skill/skill.scss
@@ -1,5 +1,38 @@
-#m_skill{
-    height: 100%;
+#m_skill {
+  height: 100%;
+  width: 100%;
+  padding: 30px;
+}
+.m_title {
+  text-align: center;
+  font-family: "Raleway-Bold";
+  color: var(--warning-color);
+  text-transform: uppercase;
+  font-size: 36px;
+  padding: 10px 0px;
+  margin-bottom: 20px;
+}
+.m_skill_content {
+  display: flex;
+  flex-direction: row;
+  .m_skill_container {
+    flex: 30%;
+    margin: 0px 20px;
     width: 100%;
-    background-color: green;
+    height: 100%;
+    font-family: "Raleway-Bold";
+    .m_skill_title {
+      font-size: 24px;
+      color: #333333;
+      margin-bottom: 20px;
+      text-transform: uppercase;
+    }
+    p {
+      margin: 10px 0px;
+      font-size: 13px;
+      line-height: 24px;
+      color: #333333;
+      font-family: "Raleway-Medium";
+    }
+  }
 }
