--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,5 +1,20 @@
-#m_services{
-    min-height: 100%;
-    width: 100%;
-    background-color: maroon;
+#m_services {
+  min-height: 100%;
+  width: 100%;
+  padding: 30px;
+}
+.m_title {
+  text-align: center;
+  font-family: "Raleway-Bold";
+  color: var(--warning-color);
+  text-transform: uppercase;
+  font-size: 36px;
+  padding: 10px 0px;
+  margin-bottom: 20px;
+}
+
+.m_services_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
