--- a/src/components/portofolio/portofolio.scss
+++ b/src/components/portofolio/portofolio.scss
@@ -1,5 +1,11 @@
-#m_portofolio{
-    min-height: 100%;
-    width: 100%;
-    background-color: maroon;
+#m_portofolio {
+  min-height: 100%;
+  width: 100%;
+  padding: 30px;
+}
+.m_container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
 }
