--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,5 +1,97 @@
-#m_contact{
-    min-height: 100%;
-    width: 100%;
-    background-color: blueviolet;
+#m_contact {
+  min-height: 100%;
+  width: 100%;
+  padding: 30px 120px;
+}
+.m_contact_container {
+  display: flex;
+  flex-direction: row;
+  .m_contact_info {
+    flex: 50%;
+    p {
+      max-width: 80%;
+      margin: 10px 0px;
+      font-size: 13px;
+      line-height: 24px;
+      color: #333333;
+      font-family: "Raleway-Medium";
+    }
+  }
+  .m_contact_form {
+    flex: 50%;
+  }
+  .m_contact_title {
+    color: #333333;
+    font-size: 24px;
+    line-height: 28px;
+    font-family: "Raleway-Bold";
+    margin-bottom: 20px;
+  }
+}
+.m_form_content {
+  display: flex;
+  flex-direction: column;
+  .m_input {
+    height: 50px;
+    border-radius: 0px;
+    padding: 0px 16px;
+    margin: 15px 0px;
+    background-color: white;
+    border: 1px solid #999999;
+    font-size: 14px;
+    color: #999999;
+    font-family: "Raleway-Medium";
+    &:focus {
+      outline: none;
+      border: 1px solid var(--warning-color);
+    }
+  }
+  .m_textarea {
+    border-radius: 0px;
+    padding: 16px;
+    margin: 15px 0px;
+    background-color: white;
+    border: 1px solid #999999;
+    font-size: 14px;
+    color: #999999;
+    font-family: "Raleway-Medium";
+    &:focus {
+      outline: none;
+      border: 1px solid var(--warning-color);
+    }
+  }
+  .m_btn_warning {
+    margin-right: auto;
+    padding: 0px 16px;
+    background-color: var(--warning-color);
+    color: white;
+    font-size: 14px;
+    height: 50px;
+    border-radius: 0px;
+    border: none;
+    transition: background-color 0.5s;
+    &:hover {
+      background-color: darken(#fec608, 9);
+    }
+    &:focus {
+      outline: none;
+    }
+  }
+}
+.m_contact_item {
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  padding: 5px;
+  .m_content {
+    padding: 0 5px;
+    font-size: 14px;
+    font-family: "Raleway-Bold";
+    color: #999999;
+    .m_content_title {
+      color: #666666;
+      text-transform: uppercase;
+    }
+  }
 }
