--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,47 @@
-#m_header{
+#m_header {
+  font-family: "Raleway-SemiBold";
+  font-size: 13px;
+  background: var(--warning-color);
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+}
+.m_logo {
+  font-family: "Raleway-Bold";
+  font-size: 36px;
+  flex-grow: 1;
+  text-align: center;
+  a {
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: color 1s;
+    &:hover {
+      color: white;
+    }
+  }
+}
+.m_navigation {
+  margin-left: auto;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  a {
+    padding: 5px;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: color 1s;
+    &:hover {
+      color: white;
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  #m_header {
     font-family: "Raleway-SemiBold";
     font-size: 13px;
     background: var(--warning-color);
@@ -6,7 +49,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    .m_logo{
+    .m_logo {
       font-family: "Raleway-Bold";
       font-size: 36px;
       flex-grow: 1;
@@ -16,12 +59,13 @@
         text-decoration: none;
         text-transform: uppercase;
         transition: color 1s;
-        &:hover{
+        &:hover {
           color: white;
         }
       }
     }
     .m_navigation {
+      width: auto;
       margin-left: auto;
       display: flex;
       justify-content: space-evenly;
@@ -31,9 +75,10 @@
         text-decoration: none;
         text-transform: uppercase;
         transition: color 1s;
-        &:hover{
+        &:hover {
           color: white;
         }
       }
     }
+  }
 }
