--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,31 +1,46 @@
-#m_contact {
-  min-height: 100%;
-  width: 100%;
-  padding: 30px 120px;
-}
 .m_contact_container {
   display: flex;
-  flex-direction: row;
-  .m_contact_info {
-    flex: 50%;
-    p {
-      max-width: 80%;
-      margin: 10px 0px;
-      font-size: 13px;
-      line-height: 24px;
-      color: #333333;
-      font-family: "Raleway-Medium";
-    }
-  }
-  .m_contact_form {
-    flex: 50%;
-  }
-  .m_contact_title {
+  flex-direction: column;
+  align-items: center;
+}
+.m_contact_form {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 80%;
+}
+.m_contact_info {
+  width: 80%;
+  p {
+    max-width: 80%;
+    margin: 10px 0px;
+    font-size: 13px;
+    line-height: 24px;
     color: #333333;
-    font-size: 24px;
-    line-height: 28px;
+    font-family: "Raleway-Medium";
+  }
+}
+.m_contact_title {
+  color: #333333;
+  font-size: 24px;
+  line-height: 28px;
+  font-family: "Raleway-Bold";
+  margin-bottom: 20px;
+}
+.m_contact_item {
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  padding: 5px;
+  .m_content {
+    padding: 0 5px;
+    font-size: 14px;
     font-family: "Raleway-Bold";
-    margin-bottom: 20px;
+    color: #999999;
+    .m_content_title {
+      color: #666666;
+      text-transform: uppercase;
+    }
   }
 }
 .m_form_content {
@@ -78,20 +93,21 @@
     }
   }
 }
-.m_contact_item {
-  display: flex;
-  align-content: center;
-  justify-items: center;
-  align-items: center;
-  padding: 5px;
-  .m_content {
-    padding: 0 5px;
-    font-size: 14px;
-    font-family: "Raleway-Bold";
-    color: #999999;
-    .m_content_title {
-      color: #666666;
-      text-transform: uppercase;
+
+@media only screen and (min-width: 880px) {
+  #m_contact {
+    padding: 30px 120px;
+  }
+  .m_contact_container {
+    display: flex;
+    flex-direction: row;
+    .m_contact_info {
+      flex: 50%;
+    }
+    .m_contact_form {
+      margin-top: 0px;
+      margin-bottom: 0px;
+      flex: 50%;
     }
   }
 }
