--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -13,7 +13,7 @@
   p {
     max-width: 80%;
     margin: 10px 0px;
-    font-size: 13px;
+    font-size: 16px;
     line-height: 24px;
     color: #333333;
     font-family: "Raleway-Medium";
@@ -101,8 +101,12 @@
   .m_contact_container {
     display: flex;
     flex-direction: row;
+    align-items: start;
     .m_contact_info {
       flex: 50%;
+      p {
+        font-size: 16px;
+      }
     }
     .m_contact_form {
       margin-top: 0px;
